openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextjs-service
  namespace: fe64f4-dev
spec:
  ports:
    - name: web
      port: 3000
      targetPort: 3000
  selector:
    app: nextjs-app
