openshift/route.yaml
# big lesson: must set the tls part
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: nextjs-route
  namespace: fe64f4-dev
spec:
  to:
    kind: Service
    name: nextjs-service
  port:
    targetPort: web
  weight: 100
  tls:
    termination: edge
wildcardPolicy: None
